--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "fellowship"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
 axum = "0.7"
-solana-client = "1.18"
-solana-sdk = "1.18"
-anyhow = "1.0"
-dotenvy = "0.15"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+solana-sdk = "1.18.11"
+solana-program = "1.18.11"
+spl-token = { version = "4.0", features = ["no-entrypoint"] }  # Critical change
+bs58 = "0.5"
+base64 = "0.21"
+dotenv = "0.15"  # For .env support (optional)
