--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 solana-sdk = "1.18.11"
 solana-program = "1.18.11"
-spl-token = { version = "4.0", features = ["no-entrypoint"] }  # Critical change
+spl-token = { version = "4.0", features = ["no-entrypoint"] }
 bs58 = "0.5"
 base64 = "0.21"
-dotenv = "0.15"  # For .env support (optional)
+dotenv = "0.15"
